Fix/fix sonar issues (#3)
* fix: added filtering for duplicates in data

* fix: added filtering for duplicates in data

* fix: added filtering for duplicates in data