@@ -5,9 +5,9 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
@@ -64,7 +64,7 @@ public class BolnisiProcessor {
         String rawData = ((UnicodeString) metadata.get(new UnicodeString(Constants.CID_TAG))).getString();
         java.util.Map<String, List<Cid>> offChainData = getOffChainData(rawData);
 
-        wineryRepository.saveAll(offChainData.keySet().stream().map(Winery::new).collect(Collectors.toList()));
+        wineryRepository.saveAll(offChainData.keySet().stream().map(Winery::new).toList());
 
         int numberOfBottles = getSumOfBottlesForCID(offChainData);
         aggregationDTO.setNumberOfBottles(numberOfBottles);
@@ -75,12 +75,22 @@ public class BolnisiProcessor {
     private int getSumOfBottlesForCID(java.util.Map<String, List<Cid>> offchainData) {
         int sumBottles = 0;
         Set<String> keys = offchainData.keySet();
+        Set<String> lotNumberPair = new HashSet<>();
+
         for (String key : keys) {
             List<Cid> cids = offchainData.get(key);
             for (Cid cid : cids) {
-                sumBottles += cid.getNumberOfBottles();
+                // due to write errors the same lot number can be included within the same transaction
+                // we need to check for duplicates within one transaction and add the number of bottles only once
+                if(lotNumberPair.add(cid.getLotNumber())) {
+                    sumBottles += cid.getNumberOfBottles();
+                }
+                else {
+                    log.info("Duplicate lot number found: {}", cid.getLotNumber());
+                }
             }
         }
+
         return sumBottles;
     }
 
